tests/lean/906.lean.expected.out
906.lean:2:4-2:15: warning: declaration uses 'sorry'
906.lean:15:2-15:28: error: tactic 'simp' failed, nested error:
maximum recursion depth has been reached
use `set_option maxRecDepth <num>` to increase limit
use `set_option diagnostics true` to get diagnostic information
